overflow issue solved in 320px by using overflow-x hidden in body

--- a/css/varients.css
+++ b/css/varients.css
@@ -81,6 +81,8 @@ html {
 
 body {
   background: var(--clr-primary-900);
+  overflow-x: hidden;
+
 }
 * {
   margin: 0;
